--- a/public/scss/broccoli_style.scss
+++ b/public/scss/broccoli_style.scss
@@ -18,6 +18,7 @@
 @import 'layout/yizixueFAQ.scss';
 @import 'layout/contract.scss';
 @import 'layout/login.scss';
+@import 'layout/qnaGuest.scss';
 // components
 @import 'component/breadcrumbs.scss';
 @import 'component/sideNav.scss';
@@ -29,6 +30,7 @@
 @import 'component/callAction';
 @import 'component/pagination.scss';
 @import 'component/aboutCarousel.scss';
+@import 'component/qnaCard.scss';
 // objects
 @import 'object/btns.scss';
 @import 'object/searchBar.scss';
