--- a/public/scss/component/breadcrumbs.scss
+++ b/public/scss/component/breadcrumbs.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    padding: 0 var(--spacing-24);
     &_prePage{
         margin: var(--spacing-12);
         color: var(--color-black);
@@ -9,6 +10,8 @@
     }
     &_currentPage{
         color: $prime_purple;
-        font-size: var(--text-3xl);
+        font-size: var(--text-4xl);
+        letter-spacing: var(--spacing-4);
+        font-weight: 600;
     }
 }
