--- a/public/scss/object/titles.scss
+++ b/public/scss/object/titles.scss
@@ -8,6 +8,16 @@
         color: var(--color-white);
 }
 
+.o-normalTitle{
+        font-size: var(--text-3xl);
+        color: $prime_purple;
+}
+
+.o-articleTitle{
+        font-size: var(--text-2xl);
+        color: $prime_purple;
+}
+
 .o-loginTitle{
         background-color: $prime_purple;
         font-size: var(--text-3xl);
