--- a/public/scss_convert/broccoli_style.css
+++ b/public/scss_convert/broccoli_style.css
@@ -2054,28 +2054,39 @@ section {
   padding: var(--spacing-12);
   background-color: rgba(255, 255, 255, 0);
 }
-.l-header_navBar {
-  margin: 0;
+.l-header__hidePhone {
+  display: none;
 }
-.l-header_navItems {
+.l-header__logo {
+  width: 20%;
+}
+.l-header__navBar {
+  margin: 0;
+  width: 80%;
+}
+.l-header__navItems {
   justify-content: end;
   align-items: center;
 }
-.l-header_li {
+.l-header__li {
   padding: 0 var(--spacing-12);
   align-self: center;
   font-size: var(--text-xl);
   font-weight: 600;
 }
-.l-header_li a {
+.l-header__li a {
   all: unset;
   cursor: pointer;
   color: var(--color-white);
 }
-.l-header_li:last-child {
+.l-header__li a:hover {
+  font-weight: 900;
+  color: #BD9EBE !important;
+}
+.l-header__li:last-child {
   padding: 0;
 }
-.l-header_thumbNail {
+.l-header__thumbNail {
   width: var(--spacing-80);
 }
 
@@ -2088,31 +2099,84 @@ section {
   padding: var(--spacing-12);
   background-color: var(--color-black);
 }
-.l-header-2_navBar {
-  margin: 0;
+.l-header-2__hidePhone {
+  display: none;
 }
-.l-header-2_navItems {
+.l-header-2__logo {
+  width: 20%;
+}
+.l-header-2__navBar {
+  margin: 0;
+  width: 80%;
+}
+.l-header-2__navItems {
   justify-content: end;
   align-items: center;
 }
-.l-header-2_li {
+.l-header-2__li {
   padding: 0 var(--spacing-12);
   align-self: center;
   font-size: var(--text-xl);
   font-weight: 600;
 }
-.l-header-2_li a {
+.l-header-2__li a {
   all: unset;
   cursor: pointer;
   color: var(--color-white);
 }
-.l-header-2_li:last-child {
+.l-header-2__li a:hover {
+  font-weight: 900;
+  color: #BD9EBE !important;
+}
+.l-header-2__li:last-child {
   padding: 0;
 }
-.l-header-2_thumbNail {
+.l-header-2__thumbNail {
   width: var(--spacing-80);
 }
 
+@media only screen and (max-width: 767.98px) {
+  .l-header-2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: var(--spacing-12);
+    background-color: var(--color-white);
+  }
+  .l-header-2__hideDesk {
+    display: none;
+  }
+  .l-header-2__logo {
+    width: 40%;
+  }
+  .l-header-2__hamburger {
+    font-size: var(--text-4xl);
+    text-align: end;
+    align-content: center;
+  }
+  .l-header-2__navItems {
+    background-color: #4C2A70;
+    display: flex;
+    flex-direction: row;
+    padding: var(--spacing-24);
+    border-radius: 0 0 var(--spacing-24) var(--spacing-24);
+  }
+  .l-header-2__links {
+    width: 33%;
+  }
+  .l-header-2__links a {
+    all: unset;
+    cursor: pointer;
+    display: block;
+    text-align: center;
+    color: var(--color-white);
+    font-size: var(--text-sm);
+  }
+  .l-header-2__thumbNail {
+    width: var(--spacing-80);
+  }
+}
 .l-footer {
   background-color: var(--color-black);
   color: var(--color-white);
@@ -2120,7 +2184,7 @@ section {
 .l-footer_brand {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   border-right: solid var(--spacing-2) var(--color-white);
 }
@@ -2152,23 +2216,38 @@ section {
   margin-bottom: var(--spacing-24);
 }
 
-.l-seniorPage {
-  display: grid;
-  grid-template-columns: repeat(20, 1fr);
+.l-seniorPage__sideNav {
+  height: 100%;
+  margin-right: calc(-1 * var(--spacing-80));
 }
-.l-seniorPage_sideNav {
-  grid-column: 1/9;
-  grid-row: 1/2;
+.l-seniorPage__content {
+  margin-left: calc(-1 * var(--spacing-80));
 }
-.l-seniorPage_content {
-  grid-column: 6/21;
-  grid-row: 1/2;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  gap: var(--spacing-24);
+.l-seniorPage .c-studentCard_schoolEnglish {
+  font-size: var(--text-lg);
+}
+.l-seniorPage hr {
+  height: var(--spacing-2);
+}
+.l-seniorPage__hidePhoneVer {
+  display: none;
+}
+.l-seniorPage__hideDeskVer {
+  display: block;
 }
 
+@media only screen and (max-width: 767.98px) {
+  .l-seniorPage__hideDeskVer {
+    display: none;
+  }
+  .l-seniorPage__hidePhoneVer {
+    display: block;
+  }
+  .l-seniorPage__content {
+    margin: 0;
+    padding: var(--spacing-8);
+  }
+}
 @keyframes change {
   from {
     opacity: 0;
@@ -2322,21 +2401,15 @@ section {
   text-shadow: var(--spacing-2) var(--spacing-2) var(--spacing-2) var(--color-black);
 }
 
-.l-uniList {
-  display: grid;
-  grid-template-columns: repeat(20, 1fr);
+.l-uniList__sideNav {
+  height: 100%;
+  margin-right: calc(-1 * var(--spacing-80));
 }
-.l-uniList_sideNav {
-  grid-column: 1/9;
-  grid-row: 1/2;
+.l-uniList__content {
+  margin-left: calc(-1 * var(--spacing-80));
 }
-.l-uniList_content {
-  grid-column: 6/21;
-  grid-row: 1/2;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  gap: var(--spacing-24);
+.l-uniList__content .c-uniCard h4 {
+  font-size: var(--text-md);
 }
 
 .l-singleArticle {
@@ -2565,10 +2638,75 @@ section {
   text-align: center;
 }
 
+.l-qnaGuest__title {
+  font-size: var(--text-3xl);
+}
+.l-qnaGuest__statusContent {
+  font-size: var(--text-2xl);
+}
+.l-qnaGuest__border {
+  border: solid var(--spacing-2) #4C2A70;
+}
+.l-qnaGuest__infoHeader {
+  background-color: #4C2A70;
+  text-align: center;
+  color: var(--color-white);
+  font-size: var(--text-2xl);
+  border-radius: var(--spacing-12) var(--spacing-12) 0 0;
+  padding: var(--spacing-12);
+}
+.l-qnaGuest__thumbNail {
+  width: var(--spacing-64);
+  z-index: 2;
+}
+.l-qnaGuest__thumbNail circle {
+  fill: #C1C1C1;
+}
+.l-qnaGuest__name {
+  text-align: center;
+  height: 100%;
+  background-color: #BD9EBE;
+  color: var(--color-white);
+  font-size: var(--text-xl);
+  margin-left: calc(-1 * var(--spacing-32));
+  align-content: center;
+}
+.l-qnaGuest__infoContact text {
+  font-size: var(--text-3xl);
+}
+.l-qnaGuest__callAction {
+  background-color: #BD9EBE;
+  color: var(--color-white);
+  border-radius: 0 0 var(--spacing-12) var(--spacing-12);
+}
+.l-qnaGuest__seeMore {
+  text-align: center;
+  background-color: #4C2A70;
+  border-radius: var(--spacing-12);
+  color: var(--color-white);
+  font-size: var(--text-2xl);
+  margin-top: calc(-1 * var(--spacing-24));
+  padding: var(--spacing-24);
+}
+.l-qnaGuest__quest {
+  text-align: center;
+  font-size: var(--text-2xl);
+  color: var(--color-white);
+}
+.l-qnaGuest__join {
+  text-align: center;
+  background-color: #4C2A70;
+  border-radius: var(--spacing-32);
+  color: var(--color-white);
+  font-size: var(--text-xl);
+  padding: var(--spacing-12);
+}
+
 .c-breadcrumbs {
   display: flex;
   flex-direction: column;
   align-items: start;
+  padding: 0 var(--spacing-24);
 }
 .c-breadcrumbs_prePage {
   margin: var(--spacing-12);
@@ -2577,7 +2715,9 @@ section {
 }
 .c-breadcrumbs_currentPage {
   color: #4C2A70;
-  font-size: var(--text-3xl);
+  font-size: var(--text-4xl);
+  letter-spacing: var(--spacing-4);
+  font-weight: 600;
 }
 
 .c-sideNav {
@@ -2586,53 +2726,53 @@ section {
   grid-template-columns: repeat(20, 1fr);
   min-height: 100rem;
 }
-.c-sideNav_selections {
+.c-sideNav__selections {
   grid-column: 1/12;
   grid-row: 1/2;
 }
-.c-sideNav_selections_locations, .c-sideNav_selections_topics {
+.c-sideNav__locations, .c-sideNav__topics {
   padding: var(--spacing-24);
   background-color: #4C2A70;
-  border-radius: var(--spacing-24);
+  border-radius: var(--spacing-12);
   margin: var(--spacing-24);
   text-align: center;
-  font-size: var(--text-3xl);
+  font-size: var(--text-2xl);
 }
-.c-sideNav_selections_locations button, .c-sideNav_selections_topics button {
+.c-sideNav__locations button, .c-sideNav__topics button {
   padding: var(--spacing-12);
 }
-.c-sideNav_area {
+.c-sideNav__area {
   z-index: 2;
   grid-column: 10/21;
   grid-row: 1/2;
-  display: grid;
-  grid-template-rows: repeat(20, 1fr);
+  display: block;
 }
-.c-sideNav_area_english {
+.c-sideNav__english {
   display: none;
-  grid-row: 1/21;
-  grid-column: 1/2;
+  position: absolute;
+  top: var(--spacing-24);
   transform-origin: 0% 0%;
   transform: scale(0.8);
 }
-.c-sideNav_area_eurp {
+.c-sideNav__eurp {
   display: none;
-  grid-row: 3/21;
-  grid-column: 1/2;
+  position: absolute;
+  top: calc(var(--spacing-24) * 2 + var(--spacing-12) + var(--text-2xl) + var(--spacing-8));
   transform-origin: 0% 0%;
   transform: scale(0.8);
 }
-.c-sideNav_area_asia {
+.c-sideNav__asia {
   display: none;
-  grid-row: 5/21;
-  grid-column: 1/2;
+  position: absolute;
+  top: calc((var(--spacing-24) * 2 + var(--spacing-12) + var(--text-2xl) + var(--spacing-8)) * 2);
   transform-origin: 0% 0%;
   transform: scale(0.8);
 }
 .c-sideNav hr, .c-sideNav__hr {
   opacity: 1;
   background-color: var(--color-white);
-  height: var(--spacing-2);
+  margin: var(--spacing-8) 0;
+  color: white;
 }
 
 .c-studentCard {
@@ -3074,6 +3214,28 @@ section {
   aspect-ratio: 3.5/1;
 }
 
+.c-qnaCard {
+  border: solid var(--spacing-2) #4C2A70;
+  transform-origin: 0 0;
+  transform: scale(0.9);
+}
+.c-qnaCard__info {
+  display: flex;
+  flex-direction: row;
+}
+.c-qnaCard__thumbNail {
+  width: var(--spacing-48);
+  margin-right: var(--spacing-8);
+}
+.c-qnaCard__thumbNail circle {
+  fill: #C1C1C1;
+}
+.c-qnaCard__content {
+  color: #6e6e6e;
+  text-wrap: wrap;
+  font-size: var(--text-lg);
+}
+
 .o-btn {
   all: unset;
   font-size: var(--text-4xl);
@@ -3085,6 +3247,35 @@ section {
   font-weight: 900;
 }
 .o-btn:hover {
+  color: var(--color-white);
+}
+
+.o-smallBtn {
+  all: unset;
+  font-size: var(--text-sm);
+  color: var(--color-white);
+  cursor: pointer;
+  padding: var(--spacing-4);
+  border-radius: var(--spacing-4);
+  background-color: #4C2A70;
+  font-weight: 900;
+  align-content: center;
+}
+.o-smallBtn:hover {
+  color: var(--color-white);
+}
+
+.o-qnaBtn {
+  all: unset;
+  font-size: var(--text-md);
+  color: var(--color-white);
+  cursor: pointer;
+  padding: var(--spacing-12);
+  border-radius: var(--spacing-12);
+  background-color: #4C2A70;
+  font-weight: 900;
+}
+.o-qnaBtn:hover {
   color: var(--color-white);
 }
 
@@ -3267,6 +3458,16 @@ section {
   border-radius: 0 var(--spacing-24) var(--spacing-24) 0;
   font-size: var(--text-3xl);
   color: var(--color-white);
+}
+
+.o-normalTitle {
+  font-size: var(--text-3xl);
+  color: #4C2A70;
+}
+
+.o-articleTitle {
+  font-size: var(--text-2xl);
+  color: #4C2A70;
 }
 
 .o-loginTitle {
